# skin-care-app

./: .env.sample  .gitignore  README.md  compose.yml  settings.gradle.kts
.github/workflows/: development.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/raczu/skincareapp/: AppContainer.kt  MainActivity.kt  (+2 more)
app/src/main/res/values/: themes.xml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0d3c848c0c3d_initdb.py  2da2e90703de_initdb.py  3f5ef48e9497_initdb.py  4661255305c7_initdb.py  738692b4aac9_initdb.py  d530aa712942_initdb.py
backend/app/: main.py
backend/app/api/: deps.py  router.py  utils.py
backend/app/api/routes/: __init__.py  auth.py  device.py  notification.py  private.py  product.py  routine.py  user.py
backend/app/core/: __init__.py  celery.py  exceptions.py  security.py  settings.py
backend/app/crud/: __init__.py  device.py  notification.py  product.py  routine.py  user.py  utils.py
backend/app/database/: __init__.py  conn.py
backend/app/database/models/: __init__.py  base.py  device.py  notification.py  product.py  routine.py  user.py
backend/app/schemas/: __init__.py  common.py  device.py  notification.py  product.py  routine.py  token.py  user.py
backend/app/services/: __init__.py  fcm.py  scheduler.py
backend/app/workers/: __init__.py  tasks.py
backend/scripts/: start.sh
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mobile/: .gitignore
mobile/app/: build.gradle.kts
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/res/drawable-anydpi/: ic_notification.xml
mobile/app/src/main/res/values/: colors.xml  strings.xml
mobile/gradle/: libs.versions.toml
(+216 files in other folders)
