[project]
name = "app"
version = "0.1.0"
description = "Note your skin care routines easily."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.123.8",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "PIE", "W", "TID"]
ignore = ["E501"]
