[project]
name = "app"
version = "0.1.0"
description = "Note your skin care routines easily."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.2",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.123.8",
    "firebase-admin>=7.1.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.44",
]

[tool.uv]
override-dependencies = [
    "bcrypt<5.0.0",  # See: https://foss.heptapod.net/python-libs/passlib/-/issues/196.
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "PIE", "W", "TID"]
ignore = ["E501"]
